<resources>
    <string name="app_name">ChatApplication</string>
    <string name="LoginStr">LOG IN</string>
    <string name="registerStr">REGISTER</string>
    <string name="FirstNameHint">First Name</string>
    <string name="LastHint">Last Name</string>
    <string name="Allow">Accept Notifications</string>
    <string name="Password1">Password</string>
    <string name="gender">gender:</string>
    <string name="Username1">Username</string>
    <string name="Birth">Birth day:</string>
    <string name="LogoutStr">Log out</string>
    <string name="contactView">Pera Peric</string>
    <string name="logoutString">LOG OUT</string>
    <string name="MsgTxt">message text</string>
    <string name="SendBtnTxt">send</string>
    <string name="EmailAdrrStr">your e-mail</string>
    <string name="FirstLetter">a</string>
    <string name="randomname">Marko Markovic</string>
    <string name="hello">hello</string>
    <string name="my_cht_list">Contacts List:</string>
    <string name="message1">What are you doing?</string>
    <string name="message2">Playing video games,you?:)</string>
    <string name="message3">Woow,me too,lets play together.</string>
    <string name="message4">We could my friend.</string>
    <string name="rndmsg">Hello</string>
    <string name="nameExist">The username you have entered alredy exists</string>
    <string name="nameNotExist">The username you have entered does not exist</string>
    <string name="bundleproblem">Problem loading bundle!</string>
    <string-array name="GenderList">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
