<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aleksandar.tendjer.chatapplication.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/PasswordRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/UsernameRegister"
                android:layout_below="@+id/EditFirst"
                android:layout_marginBottom="5dp"
                android:ems="7"
                android:hint="@string/Password1"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/UsernameRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/EditFirst"
                android:layout_alignBottom="@+id/EditFirst"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:ems="7"
                android:hint="@string/Username1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/EditLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/PasswordRegister"
                android:layout_alignBottom="@+id/PasswordRegister"
                android:layout_alignStart="@+id/EditFirst"
                android:ems="7"
                android:hint="@string/LastHint"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="17dp"
                android:ems="7"
                android:hint="@string/FirstNameHint"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/EditEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="8"
                android:hint="@string/EmailAdrrStr"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/spin"
                android:layout_marginEnd="19dp"
                android:layout_toStartOf="@+id/spin"
                android:text="gender:"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/checkBox"
                android:layout_alignParentEnd="true"
                android:entries="@array/GenderList" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/EditEmail"
                android:hint="@string/Allow"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:hint="@string/Birth"
                android:textSize="16sp" />

            <DatePicker
                android:id="@+id/DataPicker"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true">

            </DatePicker>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/RegistBtns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textSize="18sp"
                android:text="@string/registerStr" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>